--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.78.0",
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.554.0",
     "next": "16.0.1",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
